defined table style and stylized button

--- a/src/index.html
+++ b/src/index.html
@@ -4,453 +4,45 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <title>48 Atalhos para VS CODE</title>
     </head>
     <body>
-        <section>
+        <section class="home">
             <h1>vs code</h1>
-            <h5><span>48</span>Atalhos Para</h5>
+            <img class="background_home" src="./image/vscode.png" alt="" />
+            <h2>48 Atalhos de teclado para iniciante</h2>
         </section>
-        <h2>geral</h2>
         <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
+            <h2>geral</h2>
 
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
+            <button class="btn_icone">comando</button>
+            <button class="btn_icone_windows">
+                <i class="fa-brands fa-windows"></i>
+            </button>
+            <button class="btn_icone_apple">
+                <i class="fa-brands fa-apple"></i>
+            </button>
+            <button class="btn_icone_linux">
+                <i class="fa-brands fa-linux"></i>
+            </button>
         </section>
+        <div class="tabela001">
+            <section class="tabela1">mostrar paleta de comandos</section>
+            <input class="btn_input" type="text" name="" value="CTRL+SHIFT=P" />
+            <button class="btn btn--style">copiar</button>
+            <input
+                class="btn_input"
+                type="text"
+                name=""
+                id=""
+                value="SHIFT+COMMAND+P"
+            />
+            <button class="btn">copiar</button>
+            <input class="btn_input" type="text" name="" value="CTRL+SHIFT=P" />
+            <button class="btn">copiar</button>
+        </div>
 
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
-        <h2>geral</h2>
-        <section class="geral">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>titulo 1</th>
-                        <th>titulo 2</th>
-                        <th>titulo 3</th>
-                        <th>titulo 4</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha1</td>
-                        <td>Body2 linha1</td>
-                        <td>Body3 linha1</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-
-                    <tr>
-                        <td>Body1 linha2</td>
-                        <td>Body2 linha2</td>
-                        <td>Body3 linha2</td>
-                        <td>Body3 linha1</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <td>Foot 1</td>
-                    <td>Foot 2</td>
-                    <td>Foot 3</td>
-                    <td>Foot 3</td>
-                </tfoot>
-            </table>
-        </section>
+        <script src="javascript.js"></script>
     </body>
 </html>
