added new table shape

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,6 @@
             <h1>vs code</h1>
             <img class="background_home" src="./image/vscode.png" alt="" />
             <h2>48 Atalhos de teclado para iniciante</h2>
-        </section>
-        <section class="geral">
-            <h2>geral</h2>
 
             <button class="btn_icone">comando</button>
             <button class="btn_icone_windows">
@@ -26,23 +23,93 @@
             <button class="btn_icone_linux">
                 <i class="fa-brands fa-linux"></i>
             </button>
-        </section>
-        <div class="tabela001">
-            <section class="tabela1">mostrar paleta de comandos</section>
-            <input class="btn_input" type="text" name="" value="CTRL+SHIFT=P" />
-            <button class="btn btn--style">copiar</button>
-            <input
-                class="btn_input"
-                type="text"
-                name=""
-                id=""
-                value="SHIFT+COMMAND+P"
-            />
-            <button class="btn">copiar</button>
-            <input class="btn_input" type="text" name="" value="CTRL+SHIFT=P" />
-            <button class="btn">copiar</button>
-        </div>
 
-        <script src="javascript.js"></script>
+            <table>
+                <tr>
+                    <th>mostrar paleta de comandos</th>
+                    <th>ctrl + ⇧ + p ou f1</th>
+                    <th>⇧ + ⌘ + p ou f1</th>
+                    <th>ctrl + ⇧ + p ou f1</th>
+                </tr>
+                <tr>
+                    <th>ir para arquivo</th>
+                    <th>ctrl + p</th>
+                    <th>⌘ + p</th>
+                    <th>ctrl + p</th>
+                </tr>
+                <tr>
+                    <th>abrir nova janela</th>
+                    <th>ctrl + ⇧ + n</th>
+                    <th>⇧ + ⌘ + n</th>
+                    <th>ctrl + ⇧ + n</th>
+                </tr>
+                <tr>
+                    <th>fechar janela</th>
+                    <th>ctrl + ⇧ + w</th>
+                    <th>⌘ + w</th>
+                    <th>ctrl + ⇧ + w</th>
+                </tr>
+                <tr>
+                    <th>configurações do usuário</th>
+                    <th>ctrl +</th>
+                    <th>⌘</th>
+                    <th>ctrl +</th>
+                </tr>
+                <tr>
+                    <th>mostrar atalhos de teclado</th>
+                    <th>ctrl + k</th>
+                    <th>⌘ + K</th>
+                    <th>ctrl + k</th>
+                </tr>
+                <tr>
+                    <th>cortar linha</th>
+                    <th>ctrl + x</th>
+                    <th>⌘ + x</th>
+                    <th>ctrl + x</th>
+                </tr>
+                <tr>
+                    <th>copiar linha</th>
+                    <th>ctrl + c</th>
+                    <th>⌘ + c</th>
+                    <th>ctrl + c</th>
+                </tr>
+                <tr>
+                    <th>mover linha para cima/ baixo</th>
+                    <th>alt + ↑ ou ↓</th>
+                    <th>⌥ + ↑ ou ↓</th>
+                    <th>alt + ↑ ou ↓</th>
+                </tr>
+                <tr>
+                    <th>copiar linha em cima</th>
+                    <th>⇧ + alt + ↑ ou ↓</th>
+                    <th>⇧ + ⌥ + ↑ ou ↓</th>
+                    <th>⇧ + alt + ↑ ou ↓</th>
+                </tr>
+                <tr>
+                    <th>ir para início do arqivo</th>
+                    <th>ctrl + home</th>
+                    <th>⌘ + ↑</th>
+                    <th>ctrl + home</th>
+                </tr>
+                <tr>
+                    <th>ir para fim do arquivo</th>
+                    <th>ctrl + end</th>
+                    <th>⌘ + ↓</th>
+                    <th>ctrl + end</th>
+                </tr>
+                <tr>
+                    <th>ir para linha</th>
+                    <th>ctrl + g</th>
+                    <th>^ + g</th>
+                    <th>ctrl + g</th>
+                </tr>
+                <tr>
+                    <th>ir para arquivo</th>
+                    <th>ctrl + p</th>
+                    <th>⌘ + p</th>
+                    <th>ctrl + p</th>
+                </tr>
+            </table>
+        </section>
     </body>
 </html>
