--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <body>
         <section class="home">
             <h1>vs code</h1>
-            <img class="background_home" src="./image/vscode.png" alt="" />
+            <img class="background_img" src="./image/vscode.png" alt="" />
             <h2>48 Atalhos de teclado para iniciante</h2>
 
             <button class="btn_icone">comando</button>
@@ -23,13 +23,20 @@
             <button class="btn_icone_linux">
                 <i class="fa-brands fa-linux"></i>
             </button>
-
+        </section>
+        <div class="tabela_a">
             <table>
                 <tr>
                     <th>mostrar paleta de comandos</th>
                     <th>ctrl + ⇧ + p ou f1</th>
                     <th>⇧ + ⌘ + p ou f1</th>
                     <th>ctrl + ⇧ + p ou f1</th>
+                </tr>
+                <tr>
+                    <th>pesquisar</th>
+                    <th>ctrl + f</th>
+                    <th>⌘ + f</th>
+                    <th>ctrl + f</th>
                 </tr>
                 <tr>
                     <th>ir para arquivo</th>
@@ -109,7 +116,205 @@
                     <th>⌘ + p</th>
                     <th>ctrl + p</th>
                 </tr>
+                <tr>
+                    <th>ir para símbolos</th>
+                    <th>ctrl + ⇧ + o</th>
+                    <th>⇧ + ⌘ + o</th>
+                    <th>ctrl + ⇧ + o</th>
+                </tr>
+                <tr>
+                    <th>ir para painel de problemas</th>
+                    <th>ctrl + ⇧ + m</th>
+                    <th>⇧ + ⌘ + m</th>
+                    <th>ctrl + ⇧ + m</th>
+                </tr>
+                <tr>
+                    <th>ir p/ próximo erro ou alerta</th>
+                    <th>f8</th>
+                    <th>f8 ou ⇧ + f8</th>
+                    <th>f8</th>
+                </tr>
+                <tr>
+                    <th>voltar / avançar</th>
+                    <th>alt + ←/→</th>
+                    <th>^ + - / ^ + ⇧ + -</th>
+                    <th>alt + ←/→</th>
+                </tr>
+                <tr>
+                    <th>substituir</th>
+                    <th>ctrl + h</th>
+                    <th>⌥ + ⌘ + f</th>
+                    <th>ctrl + h</th>
+                </tr>
+                <tr>
+                    <th>encontrar prévio / anterior</th>
+                    <th>f3 / ⇧ + f3</th>
+                    <th>⌘ + g / ⇧ + ⌘ + g</th>
+                    <th>f3 / ⇧ + f3</th>
+                </tr>
+                <tr>
+                    <th>selecionar todas as ocorrências de correspondências</th>
+                    <th>alt + enter</th>
+                    <th>⌥ + enter</th>
+                    <th>alt + enter</th>
+                </tr>
+                <tr>
+                    <th>mover a última seleção para a próxima find match</th>
+                    <th>ctrl + k Ctrl + d</th>
+                    <th>⌘ + k ⌘ + d</th>
+                    <th>ctrl + k Ctrl + d</th>
+                </tr>
+                <tr>
+                    <th>inserir cursor</th>
+                    <th>alt + click</th>
+                    <th>⌥ + click</th>
+                    <th>alt + click</th>
+                </tr>
+                <tr>
+                    <th>inserir cursor acima / abaixo</th>
+                    <th>ctrl + alt + ↑ ou ↓</th>
+                    <th>⌥ + ⌘ + ↑ <br />⌥ + ⌘ + ↓</th>
+                    <th>ctrl + alt + ↑ ou ↓</th>
+                </tr>
+                <tr>
+                    <th>desfazer última operação do cursor</th>
+                    <th>ctrl + u</th>
+                    <th>⌘ + u</th>
+                    <th>ctrl + u</th>
+                </tr>
+                <tr>
+                    <th>inserir cursor no final de cada linha selecionada</th>
+                    <th>⇧ + alt + i</th>
+                    <th>⇧ + ⌥</th>
+                    <th>⇧ + alt + i</th>
+                </tr>
+                <tr>
+                    <th>selecionar linha atual</th>
+                    <th>ctrl + l</th>
+                    <th>⌘ + l</th>
+                    <th>ctrl + l</th>
+                </tr>
+                <tr>
+                    <th>selecionar todas ocorrências da seleção atual</th>
+                    <th>ctrl + ⇧ + l</th>
+                    <th>⇧ + ⌘ + l</th>
+                    <th>ctrl + ⇧ + l</th>
+                </tr>
+                <tr>
+                    <th>fechar editor</th>
+                    <th>
+                        ctrl + f4<br />
+                        ctrl + w
+                    </th>
+                    <th>⌘ + w</th>
+                    <th>
+                        ctrl + f4<br />
+                        ctrl + w
+                    </th>
+                </tr>
+                <tr>
+                    <th>fechar pasta</th>
+                    <th>ctrl + k f</th>
+                    <th>⌘ + k f</th>
+                    <th>ctrl + k f</th>
+                </tr>
+                <tr>
+                    <th>dividir editor</th>
+                    <th>ctrl + /</th>
+                    <th>⌘ + /</th>
+                    <th>ctrl + /</th>
+                </tr>
+                <tr>
+                    <th>foco no grupo prévio / anterior do editor</th>
+                    <th>ctrl + k<br />ctrl + ←/→</th>
+                    <th>⌘ + k<br />⌘k ⌘←<br />⌘k ⌘→</th>
+                    <th>ctrl + k<br />ctrl + ←/→</th>
+                </tr>
+                <tr>
+                    <th>mover grupo editor para esquerda / direita</th>
+                    <th>ctrl + ⇧<br />pgup/pgdn</th>
+                    <th>⌘k ⇧⌘←<br />⌘k ⇧⌘→</th>
+                    <th>ctrl + ⇧<br />pgup/pgdn</th>
+                </tr>
+                <tr>
+                    <th>mover grupo editor ativo</th>
+                    <th>ctrl + k + ←/→</th>
+                    <th>⌘k←/⌘k→</th>
+                    <th>ctrl + k + ←/→</th>
+                </tr>
+                <tr>
+                    <th>novo arquivo</th>
+                    <th>ctrl = n</th>
+                    <th>⌘ + n</th>
+                    <th>ctrl = n</th>
+                </tr>
+                <tr>
+                    <th>abrir arquivo</th>
+                    <th>ctrl + o</th>
+                    <th>⌘ + o</th>
+                    <th>ctrl + o</th>
+                </tr>
+                <tr>
+                    <th>salvar</th>
+                    <th>ctrl + s</th>
+                    <th>⌘ + s</th>
+                    <th>ctrl + s</th>
+                </tr>
+                <tr>
+                    <th>salvar como</th>
+                    <th>ctrl + ⇧ + s</th>
+                    <th>⇧ + ⌘ + s</th>
+                    <th>ctrl + ⇧ + s</th>
+                </tr>
+                <tr>
+                    <th>salvar tudo</th>
+                    <th>ctrl + ks</th>
+                    <th>⌥ + ⌘ + s</th>
+                    <th>-</th>
+                </tr>
+                <tr>
+                    <th>fechar</th>
+                    <th>ctrl + f4</th>
+                    <th>⌘ + w</th>
+                    <th>ctrl + f4</th>
+                </tr>
+                <tr>
+                    <th>inserir breakpoint</th>
+                    <th>f9</th>
+                    <th>f9</th>
+                    <th>f9</th>
+                </tr>
+                <tr>
+                    <th>iniciar / continuar</th>
+                    <th>f5</th>
+                    <th>f5</th>
+                    <th>f5</th>
+                </tr>
+                <tr>
+                    <th>mostrar terminal integrado</th>
+                    <th>ctrl'</th>
+                    <th>^'</th>
+                    <th>ctrl'</th>
+                </tr>
+                <tr>
+                    <th>criar novo terminal</th>
+                    <th>ctrl + ⇧ + '</th>
+                    <th>^⇧'</th>
+                    <th>ctrl + ⇧ + '</th>
+                </tr>
+                <tr>
+                    <th>rolar para cima/baixo</th>
+                    <th>ctrl + ↑ ou ↓</th>
+                    <th>⌘ + ↑ ou ↓</th>
+                    <th>ctrl + ↑ ou ↓</th>
+                </tr>
+                <tr>
+                    <th>rolar página para cima/baixo</th>
+                    <th>ctrl + ⇧ + l</th>
+                    <th>pageup ou pagdn</th>
+                    <th>ctrl + ⇧ + l</th>
+                </tr>
             </table>
-        </section>
+        </div>
     </body>
 </html>
